--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "gemote" "\0"
+            VALUE "FileDescription", "girimote" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "gemote" "\0"
+            VALUE "InternalName", "girimote" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "gemote.exe" "\0"
-            VALUE "ProductName", "gemote" "\0"
+            VALUE "OriginalFilename", "girimote.exe" "\0"
+            VALUE "ProductName", "girimote" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
