--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^1.0.5
   flutter_svg: ^1.1.0
   font_awesome_flutter: ^10.1.0
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
