--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,18 @@
 name: Flutter CI
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+    # branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
-  build-ubuntu:
-    name: Build Android, Linux, Web
+  build-android:
+    name: Build Android
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
@@ -25,8 +25,6 @@ jobs:
       - run: flutter pub get
       - run: flutter build apk
       - run: flutter build appbundle
-      - run: flutter build web
-      - run: flutter build linux
       - uses: actions/upload-artifact@v4
         with:
           name: release-apk
@@ -35,10 +33,36 @@ jobs:
         with:
           name: release-appbundle
           path: build/app/outputs/bundle/release/app-release.aab
+
+  build-web:
+    name: Build Web
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - run: flutter --version
+      - run: flutter clean
+      - run: flutter pub get
+      - run: flutter build web
       - uses: actions/upload-artifact@v4
         with:
           name: release-web
           path: build/web
+
+  build-linux:
+    name: Build Linux
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - run: flutter --version
+      - run: flutter clean
+      - run: flutter pub get
+      - run: flutter build linux
       - uses: actions/upload-artifact@v4
         with:
           name: release-linux
