--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
-# Dockerfile for Flutter development with fish shell
+# Dockerfile for Flutter + Fish shell in devcontainers
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
+# 🧰 Install dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     git \
@@ -16,26 +17,28 @@ RUN apt-get update && apt-get install -y \
     nala \
     && apt-get clean
 
-
-# Install latest stable Flutter SDK
+# 🐦 Install latest stable Flutter
 ENV FLUTTER_HOME=/opt/flutter
-RUN git clone https://github.com/flutter/flutter.git -b stable $FLUTTER_HOME && \
-    $FLUTTER_HOME/bin/flutter --version
-ENV PATH="$FLUTTER_HOME/bin:$PATH"
+RUN git clone https://github.com/flutter/flutter.git -b stable $FLUTTER_HOME
+ENV PATH="${FLUTTER_HOME}/bin:${PATH}"
 
-# Set fish as default shell
-RUN chsh -s /usr/bin/fish devcontainer || true
+# ✅ Prevent tar errors from UID mismatch
+ENV TAR_OPTIONS=--no-same-owner
 
-# Pre-cache Flutter dependencies
-RUN flutter precache
+# 📦 Flutter pre-cache and enable desktop/web support
+RUN flutter precache && \
+    flutter config --enable-web && \
+    flutter config --enable-linux-desktop && \
+    flutter config --enable-macos-desktop && \
+    flutter config --enable-windows-desktop
 
-# Enable web and desktop support
-RUN flutter config --enable-web && flutter config --enable-linux-desktop && flutter config --enable-macos-desktop && flutter config --enable-windows-desktop
+# 🐟 Add Fish shell to valid shells
+RUN echo /usr/bin/fish >> /etc/shells
 
-# Set working directory
+# ✅ Set Fish shell for devcontainer user
+# WARNING: chsh doesn't work in containers, so we'll use CMD
+# and override via VS Code devcontainer.json
+CMD ["/usr/bin/fish"]
+
+# 📂 Workspace location
 WORKDIR /workspaces/girimote
-
-# Set fish as default shell for all users
-RUN echo "/usr/bin/fish" | tee -a /etc/shells && chsh -s /usr/bin/fish
-
-CMD ["fish"]
